# tv-matrix-core-tvbox-github-pages

./: .gitignore  AI_ARCHITECTURE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: matrix.yml
config/: sources.example.yml  sources.yml
output/: adult-live.m3u  adult-warehouse.json  all-lines.json  live.m3u  summary.json  tvbox.json  warehouse.json
output/backups/20260701023004/: summary.json  tvbox.json
output/backups/20260701023005/: summary.json  tvbox.json
output/backups/20260701023023/: summary.json
output/backups/20260701024818/: summary.json  tvbox.json
output/backups/20260701024819/: summary.json  tvbox.json
output/backups/20260701024953/: live.m3u  summary.json  tvbox.json
output/backups/20260701030736/: adult-live.m3u  adult-warehouse.json  all-lines.json  live.m3u  summary.json  tvbox.json  warehouse.json
output/backups/20260701030739/: adult-warehouse.json  all-lines.json  live.m3u  summary.json  tvbox.json  warehouse.json
output/backups/20260701030913/: summary.json  tvbox.json
output/backups/20260701031229/: adult-warehouse.json  all-lines.json  summary.json  (+2 more)
public/: data.json  index.html
public/output/: adult-live.m3u  adult-warehouse.json  all-lines.json  live.m3u  summary.json  tvbox.json  warehouse.json
scripts/: bootstrap.ps1  should_commit.py
src/tv_matrix/: __init__.py  cli.py  config.py  discovery.py  models.py  output.py  parser.py  readme.py  robots.py  runner.py  scoring.py  site.py  state.py  validator.py
state/: history.json
tests/: test_parser.py  test_scoring.py
(+158 files in other folders)
