[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tv-matrix-core"
version = "0.1.0"
description = "Automated TVBox/M3U source aggregation, health validation, and GitHub Pages publishing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9.0",
  "beautifulsoup4>=4.12.0",
  "PyYAML>=6.0.1",
  "urllib3>=2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0"
]

[project.scripts]
tv-matrix = "tv_matrix.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
